After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790072 - Fails to build with libical 3.0.0
Fails to build with libical 3.0.0
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.26.x
Other Linux
: Normal critical
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-11-08 16:38 UTC by Milan Crha
Modified: 2017-11-24 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (803 bytes, patch)
2017-11-08 16:38 UTC, Milan Crha
none Details | Review
Patch to use g_memdup (1.33 KB, patch)
2017-11-15 21:24 UTC, Caio Marcelo de Oliveira Filho
committed Details | Review

Description Milan Crha 2017-11-08 16:38:01 UTC
Created attachment 363229 [details] [review]
proposed patch

Fails to build with libical 3.0.0. The attached is a patch which helps.

I'd also consider to change the content of gcal_dup_icaltime() to either use memcpy() or *new_date = *date, to avoid an issue with other structure changes. This removal was easy to spot, but imagine they will add some. They you fail to copy the value being it this way, making the structure content possibly invalid in some way.
Comment 1 Caio Marcelo de Oliveira Filho 2017-11-15 21:24:09 UTC
Created attachment 363766 [details] [review]
Patch to use g_memdup

Wrote this patch and then found out that this bug (and one patch already exists).

Uploaded since it does the change suggested by Milan Chra, and avoids listing all the struct members since we don't need to.
Comment 2 Georges Basile Stavracas Neto 2017-11-24 17:14:02 UTC
Thanks for the patches! Pushed to master, will cherry-pick to gnome-3-26 and gnome-3-24